# SystemPaperDaily

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  test_openai.py
.github/workflows/: daily.yaml
src/: deduplicator.py  notifier.py  pdf_extractor.py  summarizer.py
src/sources/: __init__.py  arxiv_source.py  base.py  rss_source.py
tests/: README.md  __init__.py  test_email.py  test_gmail.py  test_openai.py
